--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
 # Contact details
-OWNER_NOMER=2348109263390
+OWNER_NOMER=2349074614697
 YT_NAME=YT: @EliteProTech
 SOCIAL_M=GitHub: EliteProTech
 LOCATION=Nigeria, Port Harcourt
 
 # Creator details
-OWNER_NUMBER=2348109263390
-OWNER_NAME=ElitePro
+OWNER_NUMBER=2349074614697
+OWNER_NAME=Sammie.me
 BOT_NAME=ELITE-PRO-V1
 
 # Default settings
